add tabulate install in CI

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,5 +18,32 @@ include_package_data = True
 zip_safe = False
 install_requires = 
     dol
-		
+
+[options.extras_require]
+pdf = 
+    pypdf
+word = 
+    mammoth
+excel = 
+    pandas
+    openpyxl
+    tabulate
+powerpoint = 
+    python-pptx
+html = 
+    html2text
+notebook = 
+    nbconvert
+    nbformat
+all = 
+    pypdf
+    mammoth
+    pandas
+    openpyxl
+    tabulate
+    python-pptx
+    html2text
+    nbconvert
+    nbformat
+
 
